--- a/src/app/features/planner/planner-task/planner-task.component.scss
+++ b/src/app/features/planner/planner-task/planner-task.component.scss
@@ -105,7 +105,7 @@ done-toggle {
 
   line-height: 1.5;
   position: relative;
-  @include truncateText();
+  overflow: hidden;
   flex-grow: 1;
   flex-shrink: 1;
 
@@ -119,7 +119,7 @@ done-toggle {
   padding-right: var(--s-half);
   padding-top: var(--s-half);
   padding-bottom: var(--s-half);
-  @include truncateText();
+  overflow: hidden;
   line-height: 1.1;
   font-size: var(--planner-font-size-smaller-mobile);
 
